#9 Added/updated enums ImportAction, LocalizedTextType, NotificationPlatform, OrefDescAccessFlags, TemporaryKeyDomains, TicketCategoryDelegateMethod, TicketReadStatus, Domain, DurationUnit

--- a/docs/api-reference/CRMScript.Native.Company.yml
+++ b/docs/api-reference/CRMScript.Native.Company.yml
@@ -278,7 +278,7 @@ items:
   fullName: CRMScript.Native.Company.toParser(Parser)
   type: Method
   summary: "\nPuts a lot of fields into the input parser.\n"
-  remarks: "\nFields that will be loaded:<ul><li>company.id: The id</li><li>company.name: The name</li><li>company.note: The note</li><li>company.domain: The domain</li><li>company.phone: Phone number</li><li>company.fax: Fax number</li><li>company.adr: The address</li><li>company.ourContact: The ID of the user that is this company's contact</li><li>company.primaryContact.id: The ID of the customer that is this company's primary contact</li><li>company.primaryContact.email: The email address of the customer that is this company's primary contact</li><li>company.extraFieldName: The name of the extrafield, (not x_fieldname)</li></ul>\n"
+  remarks: "\nFields that will be loaded:<ul><li>company.id: The ID</li><li>company.name: The name</li><li>company.note: The note</li><li>company.domain: The domain</li><li>company.phone: Phone number</li><li>company.fax: Fax number</li><li>company.adr: The address</li><li>company.ourContact: The ID of the user that is this company's contact</li><li>company.primaryContact.id: The ID of the customer that is this company's primary contact</li><li>company.primaryContact.email: The email address of the customer that is this company's primary contact</li><li>company.extraFieldName: The name of the extrafield, (not x_fieldname)</li></ul>\n"
   syntax: 
     content: toParser(Parser parser)
     parameters:
