--- a/docs/api-reference/CRMScript.Native.GenericSearch.yml
+++ b/docs/api-reference/CRMScript.Native.GenericSearch.yml
@@ -339,7 +339,7 @@ items:
     parameters:
     - id: languageId
       type: CRMScript.Global.Integer
-      description: What language to use. Norwegian = 0, English = 1, German = 2, Swedish = 3, Danish = 4, Dutch = 5
+      description: What language to use.
     return:
       type: CRMScript.Global.Void 
   example: 
