--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoBase.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoBase.yml
@@ -124,14 +124,14 @@ items:
   nameWithType: NSFieldInfoBase.GetFieldType()
   fullName: CRMScript.NetServer.NSFieldInfoBase.GetFieldType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Integer</li><li>Enum: 2 = ShortText</li><li>Enum: 3 = LongText</li><li>Enum: 4 = Date</li><li>Enum: 5 = Blob</li><li>Enum: 6 = Checkbox</li><li>Enum: 7 = MdoList</li><li>Enum: 8 = Decimal</li><li>Enum: 9 = DateTime</li><li>Enum: 10 = Time</li><li>Enum: 11 = TimeSpan</li><li>Enum: 12 = RelationTo</li><li>Enum: 13 = Attachment</li><li>Enum: 14 = DynamicLink</li><li>Enum: 15 = ListText</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetFieldType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What sort of data does this field contain. 1 = int, 2 = short text, ...
+      description: What sort of data does this field contain. See <xref href=\"FieldMetadataType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSFieldInfoBase thing;\nInteger fieldType = thing.GetFieldType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoBase.GetHideField()
@@ -397,7 +397,7 @@ items:
     parameters:
     - id: fieldType
       type: CRMScript.Global.Integer
-      description: What sort of data does this field contain. 1 = int, 2 = short text, ... See enum fieldType.
+      description: What sort of data does this field contain. See <xref href=\"FieldMetadataType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -631,3 +631,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.FieldMetadataType
+  commentId: T:CRMScript.NetServer.FieldMetadataType
+  isExternal: true
+  name: FieldMetadataType
+  nameWithType: FieldMetadataType
+  fullName: CRMScript.NetServer.FieldMetadataType
