--- a/docs/api-reference/CRMScript.NetServer.NSHierarchyEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSHierarchyEntity.yml
@@ -78,14 +78,14 @@ items:
   nameWithType: NSHierarchyEntity.GetDomain()
   fullName: CRMScript.NetServer.NSHierarchyEntity.GetDomain()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = ExtraTables</li><li>Enum: 2 = ScreenDefinitions</li><li>Enum: 3 = Scripts</li><li>Enum: 4 = Selections</li><li>Enum: 5 = ExternalDocuments</li><li>Enum: 6 = UserGroups</li><li>Enum: 7 = ExternalDocumentRelatedToSpmMessage</li><li>Enum: 8 = Dashboards</li></ul>\\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDomain()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Domain separating the different hierarchy
+      description: Domain separating the different hierarchy. See <xref href=\"Domain\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSHierarchyEntity thing;\nInteger domain = thing.GetDomain();</code></pre>\n"
 - uid: CRMScript.NetServer.NSHierarchyEntity.GetFullname()
@@ -287,7 +287,7 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: Domain separating the different hierarchy. See enum domain.
+      description: Domain separating the different hierarchy. See <xref href=\"Domain\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -489,12 +489,6 @@ references:
   - name: '[]'
     nameWithType: '[]'
     fullName: '[]'
-- uid: CRMScript.NetServer.NSHierarchyEntity
-  commentId: T:CRMScript.NetServer.NSHierarchyEntity
-  isExternal: true
-  name: NSHierarchyEntity
-  nameWithType: NSHierarchyEntity
-  fullName: CRMScript.NetServer.NSHierarchyEntity
 - uid: CRMScript.Global.Integer
   commentId: T:CRMScript.Global.Integer
   isExternal: true
@@ -519,3 +513,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.Domain
+  commentId: T:CRMScript.NetServer.Domain
+  isExternal: true
+  name: Domain
+  nameWithType: Domain
+  fullName: CRMScript.NetServer.Domain
