--- a/docs/api-reference/CRMScript.NetServer.NSImportLine.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSImportLine.yml
@@ -68,14 +68,14 @@ items:
   nameWithType: NSImportLine.GetOperation()
   fullName: CRMScript.NetServer.NSImportLine.GetOperation()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = PersonAdded</li><li>Enum: 2 = PersonUpdated</li><li>Enum: 4 = PersonNoChange</li><li>Enum: 8 = ContactAdded</li><li>Enum: 16 = ContactUpdated</li><li>Enum: 32 = ContactNoChange</li><li>Enum: 64 = ProductAdded</li><li>Enum: 128 = ProductUpdated</li><li>Enum: 256 = ProductNoChange</li><li>Enum: 512 = Obs</li><li>Enum: 1024 = ObsERPDuplicate</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetOperation()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Which operation will be used? This is a read-only property
+      description: Which operation will be used? This is a read-only property. See <xref href=\"ImportAction\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSImportLine thing;\nInteger operation = thing.GetOperation();</code></pre>\n"
 - uid: CRMScript.NetServer.NSImportLine.GetSelected()
@@ -177,7 +177,7 @@ items:
     parameters:
     - id: operation
       type: CRMScript.Global.Integer
-      description: Which operation will be used? This is a read-only property. See enum operation.
+      description: Which operation will be used? This is a read-only property. See <xref href=\"ImportAction\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -287,15 +287,15 @@ references:
   - name: '[]'
     nameWithType: '[]'
     fullName: '[]'
-- uid: CRMScript.Global.String
-  commentId: T:CRMScript.Global.String
-  isExternal: true
-  name: String
-  nameWithType: String
-  fullName: CRMScript.Global.String
 - uid: CRMScript.Global.Void
   commentId: T:CRMScript.Global.Void
   isExternal: true
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.ImportAction
+  commentId: T:CRMScript.NetServer.ImportAction
+  isExternal: true
+  name: ImportAction
+  nameWithType: ImportAction
+  fullName: CRMScript.NetServer.ImportAction
