--- a/docs/api-reference/CRMScript.NetServer.NSListAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSListAgent.yml
@@ -365,13 +365,13 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"Domain\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: path
       type: CRMScript.Global.String
-      description: 
+      description: Hierarchy path to parent item
     - id: name
       type: CRMScript.Global.String
-      description: See enum name.
+      description: Name of node to add
     return:
       type: CRMScript.NetServer.NSHierarchyEntity
   example: 
@@ -1015,10 +1015,10 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"Domain\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: path
       type: CRMScript.Global.String
-      description: See enum path.
+      description: 
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1378,10 +1378,10 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"Domain\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: children
       type: CRMScript.Global.Bool
-      description: See enum children.
+      description: 
     return:
       type: CRMScript.NetServer.NSHierarchyEntity[]
   example: 
@@ -2860,13 +2860,13 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"Domain\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: path
       type: CRMScript.Global.String
       description: 
     - id: children
       type: CRMScript.Global.Bool
-      description: See enum children
+      description: 
     return:
       type: CRMScript.NetServer.NSHierarchyEntity
   example: 
@@ -3256,7 +3256,7 @@ items:
       description: 
     - id: languageId
       type: CRMScript.Global.Integer
-      description: See enum languageId.
+      description: 
     return:
       type: CRMScript.NetServer.NSLocalizedText
   example: 
@@ -3335,13 +3335,13 @@ items:
   fullName: CRMScript.NetServer.NSListAgent.GetLocalizedTextsByType(Integer[])
   type: Method
   summary: "\nGets localized text by their typeGets localized text by their type.\n"
-  remarks: "\n<h3>Types</h3><table><thead><tr><th>Enum</th><th>Type</th></tr></thead><tbody><tr><td>0</td><td>Unknown</td></tr><tr><td>1</td><td>Label</td></tr><tr><td>2</td><td>Table</td></tr><tr><td>3</td><td>Column</td></tr><tr><td>4</td><td>ImportField</td></tr><tr><td>5</td><td>ImportObject</td></tr><tr><td>6</td><td>ImportGUICategory</td></tr><tr><td>7</td><td>StartupHints</td></tr><tr><td>11</td><td>FunctionRightLabel</td></tr><tr><td>12</td><td>FunctionRightDesc</td></tr><tr><td>16</td><td>StatusMonitorName</td></tr><tr><td>19</td><td>UdefContactLabel</td></tr><tr><td>20</td><td>UdefPersonLabel</td></tr><tr><td>21</td><td>UdefProjectLabel</td></tr><tr><td>22</td><td>UdefSaleLabel</td></tr><tr><td>23</td><td>UdefAppointmentLabel</td></tr><tr><td>24</td><td>UdefDocumentLabel</td></tr><tr><td>41</td><td>PushNotificationText</td></tr></tbody></table>\n"
+  remarks: ""
   syntax: 
     content: NSLocalizedText[] GetLocalizedTextsByType(Integer[] textTypes)
     parameters:
     - id: textTypes
       type: CRMScript.Global.Integer[]
-      description: Array of localized text types. If null, all texts are returned.
+      description: Array of localized text types. If null, all texts are returned. See <xref href=\"LocalizedTextType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSLocalizedText[]
   example: 
@@ -6270,13 +6270,13 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"Domain\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: path
       type: CRMScript.Global.String
       description: 
     - id: entity
       type: CRMScript.NetServer.NSHierarchyEntity
-      description: See enum entity.
+      description: 
     return:
       type: CRMScript.NetServer.NSHierarchyEntity
   example: 
@@ -7194,12 +7194,6 @@ references:
   - name: '[]'
     nameWithType: '[]'
     fullName: '[]'
-- uid: CRMScript.NetServer.NSLocalizedText
-  commentId: T:CRMScript.NetServer.NSLocalizedText
-  isExternal: true
-  name: NSLocalizedText
-  nameWithType: NSLocalizedText
-  fullName: CRMScript.NetServer.NSLocalizedText
 - uid: CRMScript.NetServer.NSMrMrs
   commentId: T:CRMScript.NetServer.NSMrMrs
   isExternal: true
@@ -7708,12 +7702,6 @@ references:
   name: NSTicketPriority
   nameWithType: NSTicketPriority
   fullName: CRMScript.NetServer.NSTicketPriority
-- uid: CRMScript.NetServer.NSTicketPriority
-  commentId: T:CRMScript.NetServer.NSTicketPriority
-  isExternal: true
-  name: NSTicketPriority
-  nameWithType: NSTicketPriority
-  fullName: CRMScript.NetServer.NSTicketPriority
 - uid: CRMScript.NetServer.NSTicketStatusEntity[]
   isExternal: true
   name: NSTicketStatusEntity[]
@@ -7752,3 +7740,15 @@ references:
   name: Navigation
   nameWithType: Navigation
   fullName: CRMScript.NetServer.Navigation
+- uid: CRMScript.NetServer.Domain
+  commentId: T:CRMScript.NetServer.Domain
+  isExternal: true
+  name: Domain
+  nameWithType: Domain
+  fullName: CRMScript.NetServer.Domain
+- uid: CRMScript.NetServer.LocalizedTextType
+  commentId: T:CRMScript.NetServer.LocalizedTextType
+  isExternal: true
+  name: LocalizedTextType
+  nameWithType: LocalizedTextType
+  fullName: CRMScript.NetServer.LocalizedTextType
