--- a/docs/api-reference/CRMScript.NetServer.NSLocalizedText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSLocalizedText.yml
@@ -150,14 +150,14 @@ items:
   nameWithType: NSLocalizedText.GetType()
   fullName: CRMScript.NetServer.NSLocalizedText.GetType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Label</li><li>Enum: 2 = Table</li><li>Enum: 3 = Column</li><li>Enum: 4 = ImportField</li><li>Enum: 5 = ImportObject</li><li>Enum: 6 = ImportGUICategory</li><li>Enum: 7 = StartupHints</li><li>Enum: 11 = FunctionRightLabel</li><li>Enum: 12 = FunctionRightDesc</li><li>Enum: 16 = StatusMonitorName</li><li>Enum: 19 = UdefContactLabel</li><li>Enum: 20 = UdefPersonLabel</li><li>Enum: 21 = UdefProjectLabel</li><li>Enum: 22 = UdefSaleLabel</li><li>Enum: 23 = UdefAppointmentLabel</li><li>Enum: 24 = UdefDocumentLabel</li><li>Enum: 41 = PushNotificationText</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The type of the text string, such as Field label, Udef label.
+      description: The type of the text string, such as Field label, Udef label. See <xref href=\"LocalizedTextType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSLocalizedText thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSLocalizedText.SetIsBuiltIn(Bool)
@@ -287,7 +287,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: The type of the text string, such as Field label, Udef label. See enum type.
+      description: The type of the text string, such as Field label, Udef label. See <xref href=\"LocalizedTextType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -323,3 +323,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.LocalizedTextType
+  commentId: T:CRMScript.NetServer.LocalizedTextType
+  isExternal: true
+  name: LocalizedTextType
+  nameWithType: LocalizedTextType
+  fullName: CRMScript.NetServer.LocalizedTextType
