--- a/docs/api-reference/CRMScript.NetServer.NSPersonAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPersonAgent.yml
@@ -333,7 +333,7 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"TemporaryKeyDomain\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: targetId
       type: CRMScript.Global.Integer
       description: 
@@ -342,7 +342,7 @@ items:
       description: 
     - id: expires
       type: CRMScript.Global.DateTime
-      description: See enum expires.
+      description: 
     return:
       type: CRMScript.Global.String
       description:
@@ -427,7 +427,7 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"TemporaryKeyDomain\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: personId
       type: CRMScript.Global.Integer
       description: 
@@ -1478,3 +1478,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.TemporaryKeyDomain
+  commentId: T:CRMScript.NetServer.TemporaryKeyDomain
+  isExternal: true
+  name: TemporaryKeyDomain
+  nameWithType: TemporaryKeyDomain
+  fullName: CRMScript.NetServer.TemporaryKeyDomain
