--- a/docs/api-reference/CRMScript.NetServer.NSPreferenceDescription.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreferenceDescription.yml
@@ -74,14 +74,14 @@ items:
   nameWithType: NSPreferenceDescription.GetAccessFlags()
   fullName: CRMScript.NetServer.NSPreferenceDescription.GetAccessFlags()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = WizardMode</li><li>Enum: 2 = Level0</li><li>Enum: 4 = adminGUI</li><li>Enum: 8 = CRMGUI</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetAccessFlags()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: 1=wizard mode, 2=level 0, 4=admin gui, 8=crm gui
+      description: See <xref href=\"PrefDescAccessFlags\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSPreferenceDescription thing;\nInteger accessFlags = thing.GetAccessFlags();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPreferenceDescription.GetDescription()
@@ -441,7 +441,7 @@ items:
     parameters:
     - id: accessFlags
       type: CRMScript.Global.Integer
-      description: 1=wizard mode, 2=level 0, 4=admin gui, 8=crm gui See enum accessFlags.
+      description: See <xref href=\"PrefDescAccessFlags\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -863,3 +863,9 @@ references:
   name: PrefDescValueType
   nameWithType: PrefDescValueType
   fullName: CRMScript.NetServer.PrefDescValueType
+- uid: CRMScript.NetServer.PrefDescAccessFlags
+  commentId: T:CRMScript.NetServer.PrefDescAccessFlags
+  isExternal: true
+  name: PrefDescAccessFlags
+  nameWithType: PrefDescAccessFlags
+  fullName: CRMScript.NetServer.PrefDescAccessFlags
