--- a/docs/api-reference/CRMScript.NetServer.NSTemporaryKeyInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTemporaryKeyInfo.yml
@@ -46,14 +46,14 @@ items:
   nameWithType: NSTemporaryKeyInfo.GetDomain()
   fullName: CRMScript.NetServer.NSTemporaryKeyInfo.GetDomain()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = MailingRecipient</li><li>Enum: 2 = FormSubmitterRecipient</li><li>Enum: 3 = ViewTicketInCustomerCenter</li><li>Enum: 4 = LoginCustomerCenter</li><li>Enum: 5 = PublicFaq</li><li>Enum: 6 = ChangePasswordCustomerCenter</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDomain()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The domain for this key. Unknown if key is not valid.
+      description: The domain for this key. Unknown if key is not valid. See <xref href=\"TemporaryKeyDomain\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTemporaryKeyInfo thing;\nInteger domain = thing.GetDomain();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTemporaryKeyInfo.GetIsExpired()
@@ -133,7 +133,7 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: The domain for this key. Unknown if key is not valid. See enum domain.
+      description: The domain for this key. Unknown if key is not valid. See <xref href=\"TemporaryKeyDomain\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -229,3 +229,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.TemporaryKeyDomain
+  commentId: T:CRMScript.NetServer.TemporaryKeyDomain
+  isExternal: true
+  name: TemporaryKeyDomain
+  nameWithType: TemporaryKeyDomain
+  fullName: CRMScript.NetServer.TemporaryKeyDomain
