--- a/docs/api-reference/CRMScript.NetServer.NSTicket.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicket.yml
@@ -776,14 +776,14 @@ items:
   nameWithType: NSTicket.GetReadStatus()
   fullName: CRMScript.NetServer.NSTicket.GetReadStatus()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Green</li><li>Enum: 2 = Yellow</li><li>Enum: 3 = Red</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetReadStatus()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Whether the owner has read the ticket or not (red, yellow, green).
+      description: Whether the owner has read the ticket or not (red, yellow, green). See <xref href=\"TicketReadStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicket thing;\nInteger readStatus = thing.GetReadStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicket.GetRealTimeSpentExternally()
@@ -1827,7 +1827,7 @@ items:
     parameters:
     - id: readStatus
       type: CRMScript.Global.Integer
-      description: Whether the owner has read the ticket or not (red, yellow, green). See enum readStatus.
+      description: Whether the owner has read the ticket or not (red, yellow, green). See <xref href=\"TicketReadStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -2233,3 +2233,9 @@ references:
   name: TicketSecurityLevel
   nameWithType: TicketSecurityLevel
   fullName: CRMScript.NetServer.TicketSecurityLevel
+- uid: CRMScript.NetServer.TicketReadStatus
+  commentId: T:CRMScript.NetServer.TicketReadStatus
+  isExternal: true
+  name: TicketReadStatus
+  nameWithType: TicketReadStatus
+  fullName: CRMScript.NetServer.TicketReadStatus
