--- a/docs/api-reference/CRMScript.NetServer.NSTicketAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketAgent.yml
@@ -643,10 +643,10 @@ items:
       description: 
     - id: readStatus
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"TicketReadStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: checkEscalating
       type: CRMScript.Global.Bool
-      description: See enum checkEscalating.
+      description: 
     return:
       type: CRMScript.NetServer.NSTicketEntity
   example: 
@@ -828,3 +828,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.TicketReadStatus
+  commentId: T:CRMScript.NetServer.TicketReadStatus
+  isExternal: true
+  name: TicketReadStatus
+  nameWithType: TicketReadStatus
+  fullName: CRMScript.NetServer.TicketReadStatus
