--- a/docs/api-reference/CRMScript.NetServer.NSTicketCategoryEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketCategoryEntity.yml
@@ -148,14 +148,14 @@ items:
   nameWithType: NSTicketCategoryEntity.GetDelegateMethod()
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.GetDelegateMethod()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Even</li><li>Enum: 2 = Weighted</li><li>Enum: 3 = Unfair</li><li>Enum: 4 = Not</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDelegateMethod()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: An integer indicating the delegation method for this category.
+      description: An integer indicating the delegation method for this category. See <xref href=\"TicketCategoryDelegateMethod\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketCategoryEntity thing;\nInteger delegateMethod = thing.GetDelegateMethod();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketCategoryEntity.GetExternalName()
@@ -461,7 +461,7 @@ items:
     parameters:
     - id: delegateMethod
       type: CRMScript.Global.Integer
-      description: An integer indicating the delegation method for this category. See enum delegateMethod.
+      description: An integer indicating the delegation method for this category. See <xref href=\"TicketCategoryDelegateMethod\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -733,3 +733,9 @@ references:
   name: TicketCategoryClosingStatus
   nameWithType: TicketCategoryClosingStatus
   fullName: CRMScript.NetServer.TicketCategoryClosingStatus
+- uid: CRMScript.NetServer.TicketCategoryDelegateMethod
+  commentId: T:CRMScript.NetServer.TicketCategoryDelegateMethod
+  isExternal: true
+  name: TicketCategoryDelegateMethod
+  nameWithType: TicketCategoryDelegateMethod
+  fullName: CRMScript.NetServer.TicketCategoryDelegateMethod
