--- a/docs/api-reference/CRMScript.NetServer.NSTicketEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketEntity.yml
@@ -624,14 +624,14 @@ items:
   nameWithType: NSTicketEntity.GetReadStatus()
   fullName: CRMScript.NetServer.NSTicketEntity.GetReadStatus()
   type: Method
-  summary: "\nWhether the owner has read the ticket or not (red, yellow, green).\n"
-  remarks: "<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Green</li><li>Enum: 2 = Yellow</li><li>Enum: 3 = Red</li></ul>"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Integer GetReadStatus()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description:
+      description: Whether the owner has read the ticket or not (red, yellow, green). See <xref href=\"TicketReadStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketEntity thing;\nInteger readStatus = thing.GetReadStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketEntity.GetRealTimeSpentExternally()
@@ -1493,14 +1493,14 @@ items:
   nameWithType: NSTicketEntity.SetReadStatus(Integer)
   fullName: CRMScript.NetServer.NSTicketEntity.SetReadStatus(Integer)
   type: Method
-  summary: "\nWhether the owner has read the ticket or not (red, yellow, green).\n"
-  remarks: "\nSee enum readStatus.\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetReadStatus(Integer readStatus)
     parameters:
     - id: readStatus
       type: CRMScript.Global.Integer
-      description: 
+      description: Whether the owner has read the ticket or not (red, yellow, green). See <xref href=\"TicketReadStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -2021,3 +2021,9 @@ references:
   name: TicketSecurityLevel
   nameWithType: TicketSecurityLevel
   fullName: CRMScript.NetServer.TicketSecurityLevel
+- uid: CRMScript.NetServer.TicketReadStatus
+  commentId: T:CRMScript.NetServer.TicketReadStatus
+  isExternal: true
+  name: TicketReadStatus
+  nameWithType: TicketReadStatus
+  fullName: CRMScript.NetServer.TicketReadStatus
