--- a/docs/api-reference/CRMScript.NetServer.ShipmentAddrStatus.yml
+++ b/docs/api-reference/CRMScript.NetServer.ShipmentAddrStatus.yml
@@ -115,7 +115,7 @@ items:
   nameWithType: ShipmentAddrStatus.Clicked
   fullName: CRMScript.NetServer.ShipmentAddrStatus.Clicked
   type: Field
-  summary: "\n7: Test recipient, will be deleted after sent (enum name is not correct, but that cant be changed now)\n"
+  summary: "\n7: Test recipient, will be deleted after sent\n"
   syntax:
     content: Clicked = 7
     return:
