--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -864,8 +864,6 @@ items:
     items:
     - name: Enum access
       href: CRMScript.NetServer.access.yml
-    - name: Enum accessFlags
-      href: CRMScript.NetServer.accessFlags.yml
     - name: Enum action
       href: CRMScript.NetServer.action.yml
     - name: ActivityStatus
@@ -904,12 +902,8 @@ items:
       href: CRMScript.NetServer.ChatSessionStatus.yml
     - name: ChatWidgetSize
       href: CRMScript.NetServer.ChatWidgetSize.yml
-    - name: Enum checkEscalating
-      href: CRMScript.NetServer.checkEscalating.yml
     - name: CheckoutState
       href: CRMScript.NetServer.CheckoutState.yml
-    - name: Enum children
-      href: CRMScript.NetServer.children.yml
     - name: Enum colorIndex
       href: CRMScript.NetServer.colorIndex.yml
     - name: ContactAction
@@ -928,8 +922,6 @@ items:
       href: CRMScript.NetServer.dataRightValue.yml
     - name: Enum defaultVideomeetingStatus
       href: CRMScript.NetServer.defaultVideomeetingStatus.yml
-    - name: Enum delegateMethod
-      href: CRMScript.NetServer.delegateMethod.yml
     - name: Enum description
       href: CRMScript.NetServer.description.yml
     - name: Enum designtype
@@ -944,10 +936,10 @@ items:
       href: CRMScript.NetServer.DocTmplQuoteType.yml
     - name: DocumentLockSemantics
       href: CRMScript.NetServer.DocumentLockSemantics.yml
-    - name: Enum domain
-      href: CRMScript.NetServer.domain.yml
-    - name: Enum durationUnit
-      href: CRMScript.NetServer.durationUnit.yml
+    - name: Domain
+      href: CRMScript.NetServer.Domain.yml
+    - name: DurationUnit
+      href: CRMScript.NetServer.DurationUnit.yml
     - name: EMailMergeTargetType
       href: CRMScript.NetServer.EMailMergeTargetType.yml
     - name: Enum entity
@@ -962,8 +954,6 @@ items:
       href: CRMScript.NetServer.EventHandlerType.yml
     - name: ExecuteOnEvent
       href: CRMScript.NetServer.ExecuteOnEvent.yml
-    - name: Enum expires
-      href: CRMScript.NetServer.expires.yml
     - name: Enum externalUserInfoModification
       href: CRMScript.NetServer.externalUserInfoModification.yml
     - name: Enum fieldKeys
@@ -978,34 +968,30 @@ items:
       href: CRMScript.NetServer.FreeTextOperator.yml
     - name: GeneratorEncoding
       href: CRMScript.NetServer.GeneratorEncoding.yml
+    - name: ImportAction
+      href: CRMScript.NetServer.ImportAction.yml
     - name: InvitationStatus
       href: CRMScript.NetServer.InvitationStatus.yml
     - name: Enum justification
       href: CRMScript.NetServer.justification.yml
-    - name: Enum languageId
-      href: CRMScript.NetServer.languageId.yml
     - name: Enum LicenseStatus
       href: CRMScript.NetServer.LicenseStatus.yml
+    - name: LocalizedTextType
+      href: CRMScript.NetServer.LocalizedTextType.yml
     - name: Enum messageCategory
       href: CRMScript.NetServer.messageCategory.yml
-    - name: Enum name
-      href: CRMScript.NetServer.name.yml
     - name: Navigation
       href: CRMScript.NetServer.Navigation.yml
-    - name: Enum operation
-      href: CRMScript.NetServer.operation.yml
     - name: OrderBySortType
       href: CRMScript.NetServer.OrderBySortType.yml
     - name: Enum orientation
       href: CRMScript.NetServer.orientation.yml
+    - name: NotificationPlatform
+      href: CRMScript.NetServer.NotificationPlatform.yml
     - name: Enum origin
       href: CRMScript.NetServer.origin.yml
-    - name: Enum path
-      href: CRMScript.NetServer.path.yml
-    - name: Enum personId
-      href: CRMScript.NetServer.personId.yml
-    - name: Enum platform
-      href: CRMScript.NetServer.platform.yml
+    - name: PrefDescAccessFlags
+      href: CRMScript.NetServer.PrefDescAccessFlags.yml
     - name: PrefDescValueType
       href: CRMScript.NetServer.PrefDescValueType.yml
     - name: PreferenceLevel
@@ -1014,8 +1000,6 @@ items:
       href: CRMScript.NetServer.priority.yml
     - name: PublishType
       href: CRMScript.NetServer.PublishType.yml
-    - name: Enum readStatus
-      href: CRMScript.NetServer.readStatus.yml
     - name: RecurrencePattern
       href: CRMScript.NetServer.RecurrencePattern.yml
     - name: RecurrenceUpdateMode
@@ -1055,12 +1039,18 @@ items:
       href: CRMScript.NetServer.StringSearchType.yml
     - name: TaskType
       href: CRMScript.NetServer.TaskType.yml
+    - name: TemporaryKeyDomain
+      href: CRMScript.NetServer.TemporaryKeyDomain.yml
     - name: TicketBaseStatus
       href: CRMScript.NetServer.TicketBaseStatus.yml
     - name: TicketCategoryClosingStatus
       href: CRMScript.NetServer.TicketCategoryClosingStatus.yml
+    - name: TicketCategoryDelegateMethod
+      href: CRMScript.NetServer.TicketCategoryDelegateMethod.yml
     - name: TicketPriorityEscalateEvent
       href: CRMScript.NetServer.TicketPriorityEscalateEvent.yml
+    - name: TicketReadStatus
+      href: CRMScript.NetServer.TicketReadStatus.yml
     - name: TicketSecurityLevel
       href: CRMScript.NetServer.TicketSecurityLevel.yml
     - name: TicketStatusTimeCounter
