--- a/docs/api-reference/CRMScript.Native.Ticket.yml
+++ b/docs/api-reference/CRMScript.Native.Ticket.yml
@@ -105,7 +105,7 @@ items:
   summary: "\nThis function does a check according to the ticket's priority and the input action. The effect of calling this function might be that the escalation stops, restarts or continues.\n"
   remarks: "\nPossible values:<ul><li>ActionRead = 0</li><li>ActionChangedOwner = 1</li><li>ActionNewInfo = 2</li><li>ActionClosed = 3</li><li>ActionChangedPriority = 4</li><li>ActionNew = 5</li></ul>\n"
   syntax: 
-    content: checkEscalating(Integer action)
+    content: Void checkEscalating(Integer action)
     parameters:
     - id: action
       type: CRMScript.Global.Integer
@@ -239,7 +239,7 @@ items:
   fullName: CRMScript.Native.Ticket.getValue(String)
   type: Method
   summary: "\nGets the value of given column name as a String\n"
-  remarks: "\nPossible values:<ul><li>id</li><li>title</li><li>category: the id</li><li>ownedBy: (owned_by), the ID of the user who owns the ticket</li><li>slevel: the security level of the ticket, 1 is internal, 2 is external</li><li>priority: the id</li><li>status: 1 = active, 2 = closed, 3 = postponed, 4 = deleted, 5 = composed</li><li>ticketStatus</li><li>custId: the ID of the primary customer</li><li>createdBy: the ID of the user who posted the ticket, 1 if the ticket is posted into the system</li><li>author</li><li>activate: the datetime when the ticket was activated</li><li>createdAt: (created_at), the datetime when the ticket was created</li><li>closedAt: (closed_at), the datetime when the ticket was closed</li><li>repliedAt: (replied_at), the datetime when the ticket first was replied at</li><li>origCategory: the original category</li><li>origPriority: the original priority</li><li>isInEscalation</li><li>displayFilter</li><li>filterId</li><li>filterAddress</li><li>readStatus</li><li>deadline</li><li>readByOwner</li><li>firstReadByUser</li><li>firstReadByOwner</li></ul>\n"
+  remarks: "\nPossible values:<ul><li>id</li><li>title</li><li>category: the ID</li><li>ownedBy: (owned_by), the ID of the user who owns the ticket</li><li>slevel: the security level of the ticket, 1 is internal, 2 is external</li><li>priority: the id</li><li>status: 1 = active, 2 = closed, 3 = postponed, 4 = deleted, 5 = composed</li><li>ticketStatus</li><li>custId: the ID of the primary customer</li><li>createdBy: the ID of the user who posted the ticket, 1 if the ticket is posted into the system</li><li>author</li><li>activate: the datetime when the ticket was activated</li><li>createdAt: (created_at), the datetime when the ticket was created</li><li>closedAt: (closed_at), the datetime when the ticket was closed</li><li>repliedAt: (replied_at), the datetime when the ticket first was replied at</li><li>origCategory: the original category</li><li>origPriority: the original priority</li><li>isInEscalation</li><li>displayFilter</li><li>filterId</li><li>filterAddress</li><li>readStatus</li><li>deadline</li><li>readByOwner</li><li>firstReadByUser</li><li>firstReadByOwner</li></ul>\n"
   syntax: 
     content: String getValue(String colName)
     parameters:
@@ -590,3 +590,9 @@ references:
   name: TicketSecurityLevel
   nameWithType: TicketSecurityLevel
   fullName: CRMScript.NetServer.TicketSecurityLevel
+- uid: CRMScript.NetServer.TicketReadStatus
+  commentId: T:CRMScript.NetServer.TicketReadStatus
+  isExternal: true
+  name: TicketReadStatus
+  nameWithType: TicketReadStatus
+  fullName: CRMScript.NetServer.TicketReadStatus
