--- a/docs/api-reference/CRMScript.NetServer.NSPocketDeviceInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPocketDeviceInfo.yml
@@ -132,14 +132,14 @@ items:
   nameWithType: NSPocketDeviceInfo.GetPlatform()
   fullName: CRMScript.NetServer.NSPocketDeviceInfo.GetPlatform()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Apple</li><li>Enum: 1 = Google</li><li>Enum: 2 = Microsoft</li><li>Enum: 3 = AppleDeveloper</li><li>Enum: 4 = AppleAdHoc</li><li>Enum: 5 = GoogleDeveloper</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetPlatform()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What platform does this device belong to
+      description: What platform does this device belong to. See <xref href=\"NotificationPlatform\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSPocketDeviceInfo thing;\nInteger platform = thing.GetPlatform();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPocketDeviceInfo.GetPNSHandle()
@@ -287,7 +287,7 @@ items:
     parameters:
     - id: platform
       type: CRMScript.Global.Integer
-      description: What platform does this device belong to See enum platform.
+      description: What platform does this device belong to. See <xref href=\"NotificationPlatform\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -361,3 +361,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.NotificationPlatform
+  commentId: T:CRMScript.NetServer.NotificationPlatform
+  isExternal: true
+  name: NotificationPlatform
+  nameWithType: NotificationPlatform
+  fullName: CRMScript.NetServer.NotificationPlatform
