--- a/docs/api-reference/CRMScript.NetServer.NSSaleTypeEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleTypeEntity.yml
@@ -162,14 +162,14 @@ items:
   nameWithType: NSSaleTypeEntity.GetDurationUnit()
   fullName: CRMScript.NetServer.NSSaleTypeEntity.GetDurationUnit()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Second</li><li>Enum: 2 = Minute</li><li>Enum: 3 = Hour</li><li>Enum: 4 = Day</li><li>Enum: 5 = Week</li><li>Enum: 6 = Month</li><li>Enum: 7 = Quarter</li><li>Enum: 8 = HalfYear</li><li>Enum: 9 = Year</li><li>Enum: 10 = Decade</li><li>Enum: 11 = Century</li><li>Enum: 12 = Millenium</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDurationUnit()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Units for the duration (day, week, whatever)
+      description: Units for the duration (day, week, whatever). See <xref href=\"DurationUnit\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSSaleTypeEntity thing;\nInteger durationUnit = thing.GetDurationUnit();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSaleTypeEntity.GetGroupQuoteLinesBy()
@@ -617,7 +617,7 @@ items:
     parameters:
     - id: durationUnit
       type: CRMScript.Global.Integer
-      description: Units for the duration (day, week, whatever) See enum durationUnit.
+      description: Units for the duration (day, week, whatever) See <xref href=\"DurationUnit\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1047,3 +1047,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.DurationUnit
+  commentId: T:CRMScript.NetServer.DurationUnit
+  isExternal: true
+  name: DurationUnit
+  nameWithType: DurationUnit
+  fullName: CRMScript.NetServer.DurationUnit
